# legged_control

./: .gitignore
legged_controllers/: CMakeLists.txt  legged_cmpc_controller_plugins.xml  legged_controllers_plugins.xml  legged_rl_controllers_plugins.xml  package.xml
legged_controllers/cfg/: Weight.cfg
legged_controllers/config/: controllers.yaml  default.yaml
legged_controllers/config/a1/: reference.info  task.info
legged_controllers/config/rl_config/: a1_config.yaml
legged_controllers/include/legged_controllers/: LeggedCMPCController.h  MotionDataGenerator.h  MotionGenerator.h  legged_rl_controller.h  rl_policy_node.h
legged_controllers/include/legged_controllers/cheetah_basic/: ConvexMpc.h  QpSolver.h  foot_swing_trajectory.h  mpc_formulation.h  mpc_solver.h
legged_controllers/launch/: load_controller.launch  load_motion_generator.launch  load_rl_controller.launch
legged_controllers/policy/: policy_1.onnx
legged_controllers/record/: backward.json  combined_locomotion.json  forward.json  lateral_left.json  lateral_right.json  left_steering.json  right_steering.json
legged_controllers/src/: ConvexMPCFormulation.cpp  LeggedCMPCController.cpp  LeggedController.cpp  LeggedSqpMPCNode.cpp  MotionDataGenerator.cpp  legged_rl_controller.cpp  rl_policy_node.cpp
legged_estimation/include/legged_estimation/: LinearKalmanFilter.h
legged_estimation/src/: LinearKalmanFilter.cpp
legged_examples/legged_unitree/legged_unitree_hw/config/: a1.yaml
legged_gazebo/src/: LeggedHWSim.cpp
